@@ -44,6 +44,11 @@ extern void rpmtsCleanDig(void * ts)
 #define	UINT32_T	uint32_t
 #endif
 
+/* XXX retrofit the *BSD typedef for the deprived. */
+#if defined(__QNXNTO__))
+typedef	u_int32_t	uint32_t;
+#endif
+
 /*@access dbiIndexSet@*/
 /*@access dbiIndexItem@*/
 /*@access miRE@*/
