@@ -57,6 +57,11 @@
 /*@access rpmdb @*/
 /*@access dbiIndex @*/
 
+/* XXX retrofit the *BSD typedef for the deprived. */
+#if defined(__QNXNTO__))
+typedef u_int32_t       uint32_t;
+#endif
+
 /*@unchecked@*/
 static int _debug = 0;
 
