@@ -1,4 +1,5 @@
 5.0.0 -> 5.1a1:
+    - jbj: QNX: retrofit u_int32_t typedef where needed.
     - jbj: add random arch name feelgood fluffiness (#432496).
     - jbj: prepare for Fedorable dependency loops (#437041).
     - rse: upgraded from GNU libtool 1.5.x to 2.2
